Pages are created - tabs are next then functionality to tabs before adding CSS.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -19,3 +19,9 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+
+.menuItem {
+    position: relative;
+    text-align: center;
+    font-size: 1.5em;
+}
