--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,6 +3,10 @@ body {
     flex-direction: column;
 }
 
+#content {
+    text-align: center;
+}
+
 #header {
     position: relative;
     text-align: center;
@@ -28,5 +32,5 @@ img {
 
 .tabLinks {
     width: 100px;
-    height: 100px;
+    height: 30px;
 }
